--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="lbl_add_produto">Add Produto</string>
     <string name="lbl_menu_editar">Editar</string>
     <string name="lbl_confirm">Confirma</string>
-    <string name="msg_confirm_delete">Deseja mesmo excluir este registro?</string>
+    <string name="msg_confirm_delete">Deseja excluir este registro?</string>
     <string name="lbl_yes">Sim</string>
     <string name="lbl_no">Não</string>
     <string name="msg_delete_sucessfull">Registro deletado com sucesso!</string>
